@@ -1,3 +1,8 @@
+Description: Version filename of locale data (gnutls28.mo instead of
+ gnutls.mo) This is necessary to make e.g. libgnutls26 and libgnutls28
+ co-installable.
+Author: Andreas Metzler <ametzler@debian.org>
+
 diff -NurBbp a/po/Makevars b/po/Makevars
 --- a/po/Makevars	2011-04-08 12:43:00.000000000 +0200
 +++ b/po/Makevars	2011-08-07 19:42:39.000000000 +0200
