@@ -15,6 +15,7 @@ gnutls28 (3.0.2-1) UNRELEASED; urgency=low
     in the tarball.
   * [lintian] Get rid of binary-control-field-duplicates-source field
     warnings.
+  * [lintian] Add description header to 14_version_gettextcat.diff
 
  -- Andreas Metzler <ametzler@debian.org>  Sun, 21 Aug 2011 14:58:52 +0200
 
